--- a/app.json
+++ b/app.json
@@ -26,7 +26,10 @@
       "output": "static",
       "favicon": "./assets/images/Ikon5.png"
     },
-    "plugins": ["expo-router"],
+    "plugins": [
+      "expo-router",
+      "expo-font"
+    ],
     "experiments": {
       "typedRoutes": true
     }
