--- a/package.json
+++ b/package.json
@@ -19,7 +19,6 @@
     "@expo-google-fonts/poppins": "^0.2.3",
     "@expo/vector-icons": "^14.0.2",
     "@react-navigation/native": "^6.0.2",
-    "deca": "^0.1.1",
     "expo": "~51.0.28",
     "expo-constants": "~16.0.2",
     "expo-font": "~12.0.9",
@@ -32,13 +31,13 @@
     "nativewind": "^4.0.36",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-native": "^0.74.5",
+    "react-native": "0.74.5",
     "react-native-gesture-handler": "~2.16.1",
     "react-native-reanimated": "~3.10.1",
     "react-native-safe-area-context": "4.10.5",
     "react-native-screens": "3.31.1",
     "react-native-web": "~0.19.10",
-    "tailwindcss": "^3.4.6"
+    "tailwindcss": "^3.4.10"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
