--- a/package.json
+++ b/package.json
@@ -18,6 +18,9 @@
     "@expo-google-fonts/lexend": "^0.2.3",
     "@expo-google-fonts/poppins": "^0.2.3",
     "@expo/vector-icons": "^14.0.2",
+    "@react-native-firebase/app": "^20.4.0",
+    "@react-native-firebase/auth": "^20.4.0",
+    "@react-native-firebase/firestore": "^20.4.0",
     "@react-navigation/native": "^6.0.2",
     "expo": "~51.0.28",
     "expo-constants": "~16.0.2",
@@ -37,7 +40,8 @@
     "react-native-safe-area-context": "4.10.5",
     "react-native-screens": "3.31.1",
     "react-native-web": "~0.19.10",
-    "tailwindcss": "^3.4.10"
+    "tailwindcss": "^3.4.10",
+    "expo-dev-client": "~4.0.23"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
