--- a/package.json
+++ b/package.json
@@ -20,10 +20,11 @@
     "@expo/vector-icons": "^14.0.2",
     "@react-native-firebase/app": "^20.4.0",
     "@react-native-firebase/auth": "^20.4.0",
-    "@react-native-firebase/firestore": "^20.4.0",
+    "@react-native-google-signin/google-signin": "^12.2.1",
     "@react-navigation/native": "^6.0.2",
     "expo": "~51.0.28",
     "expo-constants": "~16.0.2",
+    "expo-dev-client": "~4.0.23",
     "expo-font": "~12.0.9",
     "expo-linking": "~6.3.1",
     "expo-router": "~3.5.23",
@@ -39,9 +40,10 @@
     "react-native-reanimated": "~3.10.1",
     "react-native-safe-area-context": "4.10.5",
     "react-native-screens": "3.31.1",
+    "react-native-sms-retriever": "^1.1.1",
+    "react-native-toast-message": "^2.2.0",
     "react-native-web": "~0.19.10",
-    "tailwindcss": "^3.4.10",
-    "expo-dev-client": "~4.0.23"
+    "tailwindcss": "^3.4.10"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
