--- a/package.json
+++ b/package.json
@@ -39,15 +39,20 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-native": "0.74.5",
+    "react-native-geolocation-service": "^5.3.1",
     "react-native-gesture-handler": "~2.16.1",
+    "react-native-maps": "^1.14.0",
+    "react-native-notifications": "^5.1.0",
     "react-native-paper": "^5.12.5",
     "react-native-reanimated": "~3.10.1",
     "react-native-safe-area-context": "4.10.5",
     "react-native-screens": "3.31.1",
     "react-native-sms-retriever": "^1.1.1",
+    "react-native-sound": "^0.11.2",
     "react-native-toast-message": "^2.2.0",
     "react-native-web": "~0.19.10",
-    "tailwindcss": "^3.4.10"
+    "tailwindcss": "^3.4.10",
+    "expo-image-picker": "~15.0.7"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
