--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "ndaru-farm",
+  "name": "ndaru-farm-new",
   "main": "expo-router/entry",
   "version": "1.0.0",
   "scripts": {
@@ -18,41 +18,37 @@
     "@expo-google-fonts/lexend": "^0.2.3",
     "@expo-google-fonts/poppins": "^0.2.3",
     "@expo/vector-icons": "^14.0.2",
-    "@react-native-async-storage/async-storage": "^1.24.0",
     "@react-native-firebase/app": "^20.4.0",
     "@react-native-firebase/auth": "^20.4.0",
     "@react-native-firebase/firestore": "^20.4.0",
+    "@react-native-firebase/messaging": "^20.4.0",
     "@react-native-google-signin/google-signin": "^12.2.1",
-    "@react-native-picker/picker": "^2.7.7",
     "@react-navigation/native": "^6.0.2",
     "expo": "~51.0.28",
     "expo-constants": "~16.0.2",
     "expo-dev-client": "~4.0.23",
     "expo-font": "~12.0.9",
+    "expo-image-picker": "^15.0.7",
     "expo-linking": "~6.3.1",
     "expo-router": "~3.5.23",
     "expo-splash-screen": "~0.27.5",
     "expo-status-bar": "~1.12.1",
     "expo-system-ui": "~3.0.7",
     "expo-web-browser": "~13.0.3",
-    "nativewind": "^4.0.36",
+    "nativewind": "^4.0.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-native": "0.74.5",
     "react-native-geolocation-service": "^5.3.1",
     "react-native-gesture-handler": "~2.16.1",
-    "react-native-maps": "^1.14.0",
-    "react-native-notifications": "^5.1.0",
+    "react-native-maps": "^1.18.0",
     "react-native-paper": "^5.12.5",
     "react-native-reanimated": "~3.10.1",
     "react-native-safe-area-context": "4.10.5",
     "react-native-screens": "3.31.1",
-    "react-native-sms-retriever": "^1.1.1",
-    "react-native-sound": "^0.11.2",
     "react-native-toast-message": "^2.2.0",
     "react-native-web": "~0.19.10",
-    "tailwindcss": "^3.4.10",
-    "expo-image-picker": "~15.0.7"
+    "tailwindcss": "^3.4.10"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
