--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "react-native-reanimated": "~3.10.1",
     "react-native-safe-area-context": "4.10.5",
     "react-native-screens": "3.31.1",
+    "react-native-sms-retriever": "^1.1.1",
     "react-native-toast-message": "^2.2.0",
     "react-native-web": "~0.19.10",
     "tailwindcss": "^3.4.10"
