--- a/package.json
+++ b/package.json
@@ -22,16 +22,15 @@
     "@react-native-firebase/auth": "^20.4.0",
     "@react-native-firebase/firestore": "^20.4.0",
     "@react-native-firebase/messaging": "^20.4.0",
+    "@react-native-firebase/storage": "^20.4.0",
     "@react-native-google-signin/google-signin": "^12.2.1",
     "@react-navigation/native": "^6.0.2",
-    "axios": "^1.7.4",
     "expo": "~51.0.28",
     "expo-constants": "~16.0.2",
     "expo-dev-client": "~4.0.23",
     "expo-font": "~12.0.9",
     "expo-image-picker": "^15.0.7",
     "expo-linking": "~6.3.1",
-    "expo-location": "~17.0.1",
     "expo-router": "~3.5.23",
     "expo-splash-screen": "~0.27.5",
     "expo-status-bar": "~1.12.1",
