--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "ndaru-farm-new",
+  "name": "ndaru-farm",
   "main": "expo-router/entry",
   "version": "1.0.0",
   "scripts": {
@@ -18,18 +18,10 @@
     "@expo-google-fonts/lexend": "^0.2.3",
     "@expo-google-fonts/poppins": "^0.2.3",
     "@expo/vector-icons": "^14.0.2",
-    "@react-native-firebase/app": "^20.4.0",
-    "@react-native-firebase/auth": "^20.4.0",
-    "@react-native-firebase/firestore": "^20.4.0",
-    "@react-native-firebase/messaging": "^20.4.0",
-    "@react-native-firebase/storage": "^20.4.0",
-    "@react-native-google-signin/google-signin": "^12.2.1",
     "@react-navigation/native": "^6.0.2",
     "expo": "~51.0.28",
     "expo-constants": "~16.0.2",
-    "expo-dev-client": "~4.0.23",
     "expo-font": "~12.0.9",
-    "expo-image-picker": "^15.0.7",
     "expo-linking": "~6.3.1",
     "expo-router": "~3.5.23",
     "expo-splash-screen": "~0.27.5",
@@ -41,12 +33,10 @@
     "react-dom": "18.2.0",
     "react-native": "0.74.5",
     "react-native-gesture-handler": "~2.16.1",
-    "react-native-paper": "^5.12.5",
+    "react-native-indicators": "^0.17.0",
     "react-native-reanimated": "~3.10.1",
     "react-native-safe-area-context": "4.10.5",
     "react-native-screens": "3.31.1",
-    "react-native-sms-retriever": "^1.1.1",
-    "react-native-toast-message": "^2.2.0",
     "react-native-web": "~0.19.10",
     "tailwindcss": "^3.4.10"
   },
