--- a/package.json
+++ b/package.json
@@ -46,7 +46,8 @@
     "react-native-screens": "3.31.1",
     "react-native-toast-message": "^2.2.0",
     "react-native-web": "~0.19.10",
-    "tailwindcss": "^3.4.10"
+    "tailwindcss": "^3.4.10",
+    "expo-clipboard": "~6.0.3"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
