--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@react-native-google-signin/google-signin": "^12.2.1",
     "@react-navigation/native": "^6.0.2",
     "expo": "~51.0.36",
+    "expo-clipboard": "~6.0.3",
     "expo-constants": "~16.0.2",
     "expo-dev-client": "~4.0.27",
     "expo-font": "~12.0.9",
@@ -46,8 +47,7 @@
     "react-native-screens": "3.31.1",
     "react-native-toast-message": "^2.2.0",
     "react-native-web": "~0.19.10",
-    "tailwindcss": "^3.4.10",
-    "expo-clipboard": "~6.0.3"
+    "tailwindcss": "^3.4.10"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
