--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@react-native-firebase/auth": "^20.4.0",
     "@react-native-firebase/firestore": "^20.4.0",
     "@react-native-firebase/storage": "^20.4.0",
+    "@react-native-firebase/crashlytics": "^20.4.0",
     "@react-native-google-signin/google-signin": "^12.2.1",
     "@react-navigation/native": "^6.0.2",
     "expo": "~51.0.37",
